alignments fixed

--- a/style.scss
+++ b/style.scss
@@ -204,8 +204,8 @@ img {
 
 .site-avatar {
   float: left;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 150px;
   margin-right: 20px;
 
   @include mobile {
